ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /    
spec:
  tls:     # remove fot non-tls
  - hosts:
      - foo.bar.com
    secretName: testsecret-tls  # secret of TLS type with a key and crt
  ingressClassName: nginx-example # remove the line for  default class
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/path1"
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: bar.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/path2"
        backend:
          service:
            name: service2
            port:
              number: 80
