ciliumnetworkpolicy.yaml
# https://docs.cilium.io/en/latest/security/policy/
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-http
  namespace: myapp
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  ingress:       
    - fromEndpoints:   # L3
      - matchLabels:      #  app=n3 in namespace = n2
            app: n3
            io.kubernetes.pod.namespace: n2
      toPorts:        # L4
        - ports:
            - port: "80"
              protocol: TCP
          rules:        #L7
            http:
              - method: "GET"
                path: "/public"                
  egress:
  - toEndpoints:
    - matchLabels:
        type: messenger
    authentication:
      mode: "required"     # Enable Mutual Authentication
  egressDeny:      # deny rule - can be ingressDeny also
  - toEndpoints:
    - matchLabels:
        type: database  # we use the label of the Pods behind the Service "database"
    icmps:      # L4 - block icmp
    - fields:
      - type: 8
        family: IPv4
      - type: EchoRequest
        family: IPv6
